test_files/text_sample_cp1252.txt

BEOWULF.




I.

THE LIFE AND DEATH OF SCYLD.


{The famous race of Spear-Danes.}

          Lo! the Spear-Danes' glory through splendid achievements
          The folk-kings' former fame we have heard of,
          How princes displayed then their prowess-in-battle.

{Scyld, their mighty king, in honor of whom they are often called
Scyldings. He is the great-grandfather of Hrothgar, so prominent in the
poem.}

          Oft Scyld the Scefing from scathers in numbers
        5 From many a people their mead-benches tore.
          Since first he found him friendless and wretched,
          The earl had had terror: comfort he got for it,
          Waxed 'neath the welkin, world-honor gained,
          Till all his neighbors o'er sea were compelled to
       10 Bow to his bidding and bring him their tribute:
          An excellent atheling! After was borne him

{A son is born to him, who receives the name of Beowulf--a name afterwards
made so famous by the hero of the poem.}


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Source for the following text: http://www.heorot.dk/beowulf-rede-text.html

Listen! We --of the Spear-Danes      in the days of yore,
of those clan-kings--      heard of their glory.
how those nobles      performed courageous deeds.

Hwæt! Wé Gárdena      in géardagum
þéodcyninga      þrym gefrúnon·
hú ðá æþelingas      ellen fremedon.

------------------------------------------------------------------------------

Oft Scyld Scéfing      sceaþena þréatum	
Often Scyld, Scef's son,      from enemy hosts
monegum maégþum      meodosetla oftéah·	
from many peoples      seized mead-benches;
egsode Eorle      syððan aérest wearð	
and terrorised the fearsome Heruli      after first he was
féasceaft funden      hé þæs frófre gebád·	
found helpless and destitute,      he then knew recompense for that:-
wéox under wolcnum·      weorðmyndum þáh	
he waxed under the clouds,      throve in honours,
oð þæt him aéghwylc      þára ymbsittendra	
until to him each      of the bordering tribes
ofer hronráde      hýran scolde,	
beyond the whale-road      had to submit,
gomban gyldan·      þæt wæs gód cyning.	
and yield tribute:-      that was a good king!
